Fix #5507 "Search dropdowns on Summary page are too wide"

--- a/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-summary.less
+++ b/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-summary.less
@@ -78,8 +78,9 @@
                     display: block;
                 }
 
-                // Fields to use all the available horizontal space
-                input[type = "text"] { width: 100%; }
+                input[type = "text"], select {
+                    width: 100%;
+                }
                 .input-prepend, .input-append { display: flex; }
 
                 .xbl-fr-time .input-append .xforms-input .xforms-type-time {
